--- a/assets/package.json
+++ b/assets/package.json
@@ -28,6 +28,8 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-uglify": "^2.3.0",
-    "grunt-contrib-watch": "^1.1.0"
+    "grunt-contrib-watch": "^1.1.0",
+    "cryptiles": ">=4.1.2",
+    "hoek": ">=4.2.1"
   }
 }
